--- a/PCShutdownTimer/src/pcshutdowntimer/PCShutdownTimerFrame.form
+++ b/PCShutdownTimer/src/pcshutdowntimer/PCShutdownTimerFrame.form
@@ -214,14 +214,18 @@
           <Font name="Georgia" size="12" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Log-Out"/>
-            <StringItem index="1" value="Hibernate"/>
-            <StringItem index="2" value="Restart"/>
-            <StringItem index="3" value="Shutdown"/>
+          <StringArray count="5">
+            <StringItem index="0" value="Choose a task"/>
+            <StringItem index="1" value="Log-Out"/>
+            <StringItem index="2" value="Hibernate"/>
+            <StringItem index="3" value="Restart"/>
+            <StringItem index="4" value="Shutdown"/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbActionItemStateChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnCancel">
       <Properties>
